feat(util): 添加HTTP协议支持并优化HTML转PDF工具类的安全性
- 在ALLOWED_PROTOCOLS中添加对HTTP协议的支持
- 增加HttpURLConnection导入以增强代码可读性
- 优化私有IP、回环地址和链路本地地址的检测逻辑
- 统一连接创建过程中的类型引用和常量使用
- 移除不必要的自动重定向禁用注释以简化代码